kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  ingressClassName: azure-application-gateway
  tls:
  - hosts:
    - respotify.org
    secretName: tls-secret 
  rules:
  - host: respotify.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: api.respotify.org
    http:
      paths:
      - path: /songs
        pathType: Prefix
        backend:
          service:
            name: song-service
            port:
              number: 80
  - host: auth.respotify.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8443
